# AdventureSDF

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  GI_BOIL_TASK.md  GPU_RESIDENCY_TASK.md  TEST_PLAN.md  build.rs  run-worktree.bat  run-worktree.ps1
.claude/: bake-displacement-plan.md  settings.json
.claude/hooks/: post-edit-rs.sh  stop-gate.sh
.claude/skills/: add-feature.md  analyze-chrome-trace.md  analyze-rdoc.md  bevy-ecs-design.md  create-component.md  create-scene.md  debug-shader.md  design-ecs.md  profile-shaders.md  shader-debug.md  verify-build.md
.github/workflows/: ci.yaml
assets/materials/: cobble.material.ron  cornell_blue.material.ron  cornell_green.material.ron  cornell_light.material.ron  cornell_red.material.ron  cornell_white.material.ron  emissive_cyan.material.ron  emissive_green.material.ron  emissive_orange.material.ron  gold_rough.material.ron  ground.material.ron  red_metal.material.ron  sand.material.ron  white_gloss.material.ron
assets/models/: bistro.vxo  conference.vox  conference.vxo  sibenik.vox  sibenik.vxo  sponza.vox  sponza.vxo
assets/pbrtextures/: cobble_stone_1.pbrtex.ron  cobble_stone_2.pbrtex.ron  cobble_stone_3.pbrtex.ron  cobble_stone_4.pbrtex.ron  cobble_stone_5.pbrtex.ron  cobble_stone_6.pbrtex.ron  cobble_stone_7.pbrtex.ron  ground_1.pbrtex.ron  ground_10.pbrtex.ron  ground_11.pbrtex.ron  ground_12.pbrtex.ron  ground_13.pbrtex.ron  ground_14.pbrtex.ron  ground_15.pbrtex.ron  ground_2.pbrtex.ron  ground_3.pbrtex.ron  ground_4.pbrtex.ron  ground_5.pbrtex.ron  ground_6.pbrtex.ron  ground_7.pbrtex.ron  ground_8.pbrtex.ron  ground_9.pbrtex.ron  sand_1.pbrtex.ron  sand_10.pbrtex.ron  sand_2.pbrtex.ron  sand_3.pbrtex.ron  sand_4.pbrtex.ron  sand_5.pbrtex.ron  sand_6.pbrtex.ron  sand_7.pbrtex.ron  sand_8.pbrtex.ron  sand_9.pbrtex.ron
assets/scenes/: cornell.scene  cornell16.scene  cornell2.scene  cornell4.scene  cornell8.scene  gallery.scene  lod_test.scene  mesh_test.scene  stress.scene  world.scn.ron
assets/shaders/: mesh_pbr.wgsl  sdf_brick_bake.wgsl  sdf_cone_prepass.wgsl  sdf_debug.wgsl  sdf_deferred_lit.wgsl  sdf_gi_blur.wgsl  sdf_gi_cache_fill.wgsl  sdf_gi_resolve.wgsl  sdf_probe_trace.wgsl  sdf_raymarch.wgsl  sdf_raymarch_min.wgsl  sdf_rc_cascade.wgsl  sdf_rc_combine.wgsl  sdf_rc_composite.wgsl  terrain_detail.wgsl  terrain_surface.wgsl  voxel_lights.wgsl  voxel_pack.wgsl  voxel_raytrace.wgsl  voxel_residency.wgsl  voxel_rt_composite.wgsl  worldgen_gpu.wgsl  worldgen_preview.wgsl  worldgen_voxelize.wgsl
assets/voxel/: blocks.ron
assets/worldgen/: biomes.ron  default.graph.ron  mountains_plains.graph.ron  world.graph.ron  world.worldgraph.ron
docs/: A4_4_SCOPING_NOTE.md  BIOME_SHAPE_REGISTRY_PLAN.md  BRICK_LOADING_ISSUES.md  CONSTANT_RAM_BAKE_PLAN.md  DDGI_SCALING.md  DYNAMIC_LARGE_SCENE_PLAN.md  ENGINE_OVERVIEW.md  GI_BOIL_PLAN.md  GPU_PREVIEW_RAYMARCH_PLAN.md  GPU_VOXEL_WORLDGEN_PLAN.md  HALF_RES_GI_PLAN.md  MESH_BAKE_PLAN.md  MESH_BAKE_RESEARCH.md  PERF_ROADMAP.md  PHASE_4_SCALING_PLAN.md  PHASE_A_GPU_EXECUTION.md  PHASE_D_FLIP_AND_REACH.md  PHASE_G_GALLERY_PLAN.md  PHASE_G_GC_PLAN.md  RAYTRACE_OPTIMIZATION_PLAN.md  REFACTOR_ROADMAP.md  REFERENCES.md  SCREEN_PROBE_PLAN.md  SOTA_REFERENCE.md  TERRAIN_MATERIALS_PLAN.md  TESTING.md  TILED_VOXELIZER_PLAN.md  TOROIDAL_MIGRATION_PLAN.md  UNIFIED_GPU_RESIDENCY_PLAN.md  VOXEL_FINE_RESOLUTION_PLAN.md  VOXEL_INSTANCING_PLAN.md  VOXEL_LARGE_SCENE_PLAN.md  VOXEL_PROGRAM.md  VOXEL_STORAGE_PLAN.md  VXO_FORMAT.md  WORLD_GEN_PLAN.md
docs/reference/: BufferA.txt  BufferB.txt  BufferC.txt  BufferD.txt  CubeA.txt  Image.txt  common.txt
examples/: bake_perf.rs  d1c_scaling.rs  d1d_shellfirst.rs  g2_gallery_profile.rs  g2_pack_growsnapshots.rs  g2_pack_parallel.rs  vox_to_vxo.rs  voxelize_scene.rs
src/: bench.rs  dev_flycam.rs  instrument.rs  lib.rs  main.rs  scene_manager.rs  test_utils.rs
src/assets/: compile.rs  material.rs  mod.rs  pbr_texture.rs  save.rs  tests.rs  texture_lib.rs
src/camera/: mod.rs
src/combat/: mod.rs
src/debug_toolkit/: config.rs  hot_reload.rs  mod.rs  panels.rs  profiling.rs  registry.rs  uniform_inspector.rs
src/editor/: asset_inspector.rs  chrome_trace.rs  config.rs  dock.rs  fs_util.rs  hierarchy.rs  hot_reload.rs  import_settings.rs  inspector.rs  keybinds.rs  layout.rs  material_editor.rs  material_preview.rs  menu_bar.rs  mod.rs  notifications.rs  nsight_capture.rs  panels.rs  profiling.rs  project_files.rs  registry.rs  render_panel.rs  renderdoc_capture.rs  resource_inspector.rs  resource_picker.rs  scene_browser.rs  scene_tabs.rs  selection.rs  status_bar.rs  transform_editor.rs  uniform_inspector.rs  viewport.rs  viewport_toolbar.rs  worldgen_gpu_preview.rs  worldgen_graph.rs
src/gizmo_render/: mod.rs  render.rs  shader.wgsl  shapes.rs
src/inventory/: mod.rs  tests.rs
src/networking/: mod.rs
src/node/: mod.rs
src/player/: mod.rs
src/sdf_render/: atlas.rs  bake_scheduler.rs  bc7.rs  bvh.rs  chunk.rs  cornell.rs  debug.rs  editor_camera.rs  edits.rs  gallery.rs  gizmo.rs  height.rs  light_grid.rs  lod_test.rs  mesh_bake.rs  mesh_test.rs  (+15 more)
tests/: chunk_lookup_bench.rs  ddgi_harness.rs  integration.rs  sdf_bake_gpu.rs  sdf_bake_perf.rs  sdf_gpu_rig.rs  sdf_lifecycle_gpu.rs  sdf_march_sim.rs  sdf_shadow_harness.rs  shader_validation.rs  spv_modulo_opcode.rs  voxel_cornell_headless.rs  voxel_dda_oracle.rs  voxel_dlss_guides_gpu.rs  voxel_edit.rs  voxel_gallery_residency.rs  voxel_gi_boil_gpu.rs  voxel_gi_gpu.rs  voxel_gpu_enumerate_parity.rs  voxel_gpu_lights_parity.rs  voxel_gpu_pack_parity.rs  voxel_gpu_residency_converge.rs  voxel_gpu_residency_diff_parity.rs  voxel_gpu_residency_pack_parity.rs  voxel_gpu_residency_parity.rs  voxel_lighting_gpu.rs  voxel_normal_swap.rs  voxel_paged_core_store.rs  voxel_paged_front_end_render.rs  voxel_paged_source_parity.rs  voxel_primitive_offset.rs  voxel_raytrace_gpu.rs  voxel_render_headless.rs  voxel_restir_gi_gpu.rs  voxel_seam_gpu.rs  voxel_seam_oblique_gpu.rs  voxel_show_through.rs  voxel_sponza_pack.rs  voxel_sponza_residency.rs  voxel_streaming.rs  (+8 more)
tools/: import_textures.py
(+221 files in other folders)
