[package]
name = "adventure"
version = "0.1.0"
edition = "2024"

[features]
default = []
editor = [
    "dep:bevy-inspector-egui",
    "dep:bevy_egui",
    "dep:egui_dock",
    "dep:egui-phosphor",
    # F5-in-editor RenderDoc capture (in-application API). `renderdoc` grabs the API
    # handle; `libloading` preloads renderdoc.dll before wgpu creates the device so the
    # hook installs (see `load_renderdoc` in main.rs).
    "dep:renderdoc",
    "dep:libloading",
    # Chrome-tracing profiler. Writes `trace-<timestamp>.json` on exit (load in Perfetto /
    # chrome://tracing, or hand the file to Claude to rank hot spans). Captures every Bevy
    # system + render-graph node span plus our own `info_span!` SDF spans.
    "bevy/trace_chrome",
]
# Faster incremental compiles via dynamic linking of Bevy. Dev-only — never ship.
# (Disable with `--no-default-features` when capturing in RenderDoc, which can't inject
# into a dynamically-linked Bevy.)
fast = ["bevy/dynamic_linking"]

[dependencies]
# `jpeg`/`bmp`/`tga` so the editor can preview PBR-texture role files in any of the
# formats the importer accepts (png is already a Bevy default).
bevy = { version = "0.18", features = ["bevy_remote", "jpeg", "bmp", "tga"] }
bevy_brp_extras = "0.18"
bevy_rapier3d = "0.34.0"
wgpu = "27"
bevy-inspector-egui = { version = "0.36", optional = true }
bevy_egui = { version = "0.39", optional = true }
# PBR texture-library loading: decode role-map source files (image) and read material
# manifests (ron). Multiple formats so a PBR-texture resource can reference any of them.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
# RON + serde: PBR material manifests AND the custom .scene format (soul_scene).
# Otherwise only transitive via bevy_scene.
ron = "0.12"
serde = { version = "1", features = ["derive"] }
# Offline BC7 encode of the PBR texture arrays (cached to disk; ~1/6 the VRAM).
intel_tex_2 = "0.2"
egui_dock = { version = "0.18", optional = true }
# In-app RenderDoc capture, editor-only. `libloading` preloads renderdoc.dll early so the
# graphics hook installs before the wgpu device exists.
renderdoc = { version = "0.12", optional = true }
libloading = { version = "0.8", optional = true }
# Phosphor icon font for the editor toolbar (egui 0.33-compatible). Installed into the
# egui context at startup; gives named glyph constants so toolbar buttons show real icons.
egui-phosphor = { version = "0.11", optional = true }
# egui's 2D tessellation (filled, antialiased shapes) for the in-tree gizmo overlay
# renderer. Pinned to 0.33 to reuse the copies bevy_egui 0.39 (egui 0.33) pulls in.
epaint = "0.33"
ecolor = "0.33"
emath = "0.33"
# Cast gizmo vertex/index Vec<[f32;N]>/Vec<u32> to &[u8] for GPU buffer upload.
bytemuck = "1"

[dev-dependencies]
# spv-out: emit SPIR-V from naga in tests so we can inspect which opcode signed `%`
# lowers to (OpUMod vs OpSRem) — root-cause evidence for the negative-modulo divergence.
naga = { version = "27", features = ["spv-out", "wgsl-in"] }
# Composes #import-based WGSL modules so the shader-validation test can resolve the
# split sdf shader the same way Bevy's ShaderCache does at runtime.
naga_oil = "0.20"
# block_on for the GPU compute rig (tests/sdf_gpu_rig.rs) — run real WGSL, read back buffers.
futures-lite = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
