[package]
name = "adventure"
version = "0.1.0"
edition = "2024"

[features]
# Dynamic-link Bevy by default for fast incremental dev builds. Release/ship builds and
# RenderDoc captures must drop it: `cargo build --release --no-default-features` (RenderDoc
# can't hook a dynamically-linked Bevy — see the `renderdoc` feature).
default = ["fast"]
editor = [
    "dep:bevy-inspector-egui",
    "dep:bevy_egui",
    "dep:egui_dock",
    "dep:egui-phosphor",
    # Chrome-tracing profiler, RUNTIME-TOGGLEABLE from the editor (Performance panel),
    # OFF by default. We enable `bevy/trace` for the instrumentation (every Bevy system +
    # render-graph node span plus our own `info_span!` SDF spans) but NOT `bevy/trace_chrome`
    # — that feature installs an always-on chrome layer capturing the whole session. Instead
    # we install our OWN chrome layer (via `LogPlugin::custom_layer`) gated behind an atomic
    # the editor flips, so capture starts/stops live. Writes `trace-<timestamp>.json` (load
    # in Perfetto / chrome://tracing, or hand the file to Claude to rank hot spans).
    "bevy/trace",
    "dep:tracing-chrome",
    "dep:sysinfo",
]
# In-app RenderDoc capture (F5), OFF by default. Implies `editor` (the capture plugin lives
# there). `renderdoc` grabs the in-application API handle; `libloading` preloads
# renderdoc.dll before wgpu creates the device so the hook installs (see `load_renderdoc`).
# Build with `--features renderdoc` (add `--no-default-features` to drop `fast`/dynamic_linking,
# which RenderDoc can't hook).
renderdoc = ["editor", "dep:renderdoc", "dep:libloading"]
# Emit shader debug info for an NVIDIA Nsight Graphics GPU-Trace, so sampled GPU cost maps to WGSL
# SOURCE + line numbers (not just per-pass). Two halves, both needed:
#   1. `InstanceFlags::DEBUG` (set in `main.rs::wgpu_settings` under this cfg) → naga's SPIR-V backend
#      turns on `WriterFlags::DEBUG` (emits `OpSource`/`OpLine`).
#   2. `bevy_render/decoupled_naga` → Bevy re-serializes the composed naga module back to a WGSL STRING
#      (`bevy_shader::shader_cache`) and hands wgpu `ShaderSource::Wgsl`. Without it Bevy hands wgpu a
#      bare `ShaderSource::Naga` whose source string is empty, so wgpu-core sets `debug_source = None`
#      and naga emits NO `OpSource`/`OpLine` regardless of the DEBUG flag (wgpu Discussion #7761).
# The embedded source is the COMPOSED/round-tripped WGSL (one synthetic file per pipeline), so Nsight
# shows real shader text per line, but line numbers map to that composed blob, not the original
# `assets/shaders/**.wgsl`. Full NonSemantic step-through isn't reachable (naga emits only legacy debug
# info). OFF by default (round-trip + debug info bloat shaders / slow pipeline creation); build with
# `--features editor,shader-debug` when profiling. See `rdoc/scripts/ngfx` + the `profile-shaders` skill.
shader-debug = ["dep:bevy_render", "bevy_render/decoupled_naga"]
# Faster incremental compiles via dynamic linking of Bevy. Dev-only — never ship.
# (Disable with `--no-default-features` when capturing in RenderDoc, which can't inject
# into a dynamically-linked Bevy.)
fast = ["bevy/dynamic_linking"]

[dependencies]
# Pruned Bevy feature set: `default-features = false` then ONLY what this 3D + egui + BRP app
# uses. Dropped vs Bevy's `2d`/`3d`/`ui` umbrella defaults (confirmed gone from `cargo tree`,
# faster builds): audio (bevy_audio + rodio), glTF (bevy_gltf + the gltf parser), gamepad
# (bevy_gilrs + gilrs), the `hdr` image loader, 2D sprite picking, and the
# x11/wayland/webgl/android platform backends (Windows-only dev).
# Kept: 3D PBR render + gizmos + post-process/AA, UI + text (HUD / ESC menu), scene
# (world.scn.ron), mesh+ui picking (camera MeshRayCast), winit/window, state, remote (BRP),
# tonemapping LUTs (the SDF HDR camera's Tonemapping pass — pulls ktx2+zstd), png/jpeg/bmp/tga.
# (bevy_sprite + bevy_animation stay — pulled transitively by the UI/PBR features + rapier/brp.)
bevy = { version = "0.18", default-features = false, features = [
    # app + platform
    "std", "multi_threaded", "async_executor", "reflect_auto_register",
    "bevy_asset", "bevy_log", "bevy_state", "bevy_window", "bevy_winit",
    "bevy_input_focus", "custom_cursor", "default_font", "sysinfo_plugin",
    # 3D render
    "3d_api", "bevy_render", "bevy_core_pipeline", "bevy_anti_alias",
    "bevy_post_process", "bevy_pbr", "bevy_gizmos", "bevy_gizmos_render",
    "tonemapping_luts",
    # UI + text
    "common_api", "bevy_ui", "bevy_ui_render", "bevy_text",
    # scene + picking (mesh raycast for the camera; no 2D sprite picking)
    "bevy_scene", "bevy_picking", "mesh_picking", "ui_picking",
    # remote control + image formats
    "bevy_remote", "png", "jpeg", "bmp", "tga",
] }
bevy_brp_extras = "0.18"
bevy_rapier3d = "0.34.0"
# Optional, ONLY pulled by `shader-debug`: enables `decoupled_naga` on the SAME bevy_render the `bevy`
# umbrella already uses (Cargo unifies the feature onto it) so composed shaders round-trip to a WGSL
# string and naga emits `OpSource`/`OpLine` for Nsight. Not referenced in code — a feature carrier only.
bevy_render = { version = "0.18", default-features = false, optional = true }
wgpu = "27"
# Fast non-cryptographic hasher (the rustc compiler's own FxHash) for the hot integer-keyed maps
# in the SDF bake path — brick/chunk/tile lookups per baked brick. std's SipHash is ~3–5× slower
# and pointless for these small integer keys. See `atlas.rs` / `chunk.rs` `Fx*` aliases.
rustc-hash = "2"
bevy-inspector-egui = { version = "0.36", optional = true }
bevy_egui = { version = "0.39", optional = true }
# PBR texture-library loading: decode role-map source files (image) and read material
# manifests (ron). Multiple formats so a PBR-texture resource can reference any of them.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
# RON + serde: PBR material manifests AND the custom .scene format (soul_scene).
# Otherwise only transitive via bevy_scene.
ron = "0.12"
serde = { version = "1", features = ["derive"] }
# Offline BC7 encode of the PBR texture arrays (cached to disk; ~1/6 the VRAM).
intel_tex_2 = "0.2"
egui_dock = { version = "0.18", optional = true, features = ["serde"] }
# In-app RenderDoc capture, editor-only. `libloading` preloads renderdoc.dll early so the
# graphics hook installs before the wgpu device exists.
renderdoc = { version = "0.12", optional = true }
libloading = { version = "0.8", optional = true }
# Editor-only Chrome-tracing layer, installed by us (not via `bevy/trace_chrome`) so the
# editor can start/stop capture at runtime. See `editor::chrome_trace`.
tracing-chrome = { version = "0.7", optional = true }
# Phosphor icon font for the editor toolbar (egui 0.33-compatible). Installed into the
# egui context at startup; gives named glyph constants so toolbar buttons show real icons.
egui-phosphor = { version = "0.11", optional = true }
# Host/process RAM sampling for the Performance panel's memory breakdown (editor only). We
# query it directly rather than via Bevy's SystemInformationDiagnosticsPlugin, which only
# exposes host memory as a percentage (no byte total) — we want a byte-level breakdown.
sysinfo = { version = "0.37", optional = true, default-features = false, features = ["system"] }
# egui's 2D tessellation (filled, antialiased shapes) for the in-tree gizmo overlay
# renderer. Pinned to 0.33 to reuse the copies bevy_egui 0.39 (egui 0.33) pulls in.
epaint = "0.33"
ecolor = "0.33"
emath = "0.33"
# Cast gizmo vertex/index + the SDF GPU structs (point lights, materials, light-grid cells) to
# &[u8] for buffer upload via `cast_slice`. `derive` for `#[derive(Pod, Zeroable)]` on those
# `#[repr(C)]` structs (see `sdf_render::render::gpu`), replacing hand-rolled `to_le_bytes` packing.
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
# spv-out: emit SPIR-V from naga in tests so we can inspect which opcode signed `%`
# lowers to (OpUMod vs OpSRem) — root-cause evidence for the negative-modulo divergence.
naga = { version = "27", features = ["spv-out", "wgsl-in"] }
# Composes #import-based WGSL modules so the shader-validation test can resolve the
# split sdf shader the same way Bevy's ShaderCache does at runtime. `default-features = false`
# drops naga_oil's `glsl` feature: with it on, naga_oil cross-checks each composable module's
# interface by emitting a GLSL header too, and the GLSL backend panics on `binding_array` (the
# paged atlas pool). The runtime build never enables `glsl` (bevy pulls only `test_shader`), so
# this just matches the test to the real compose path. We compose WGSL only.
naga_oil = { version = "0.20", default-features = false }
# block_on for the GPU compute rig (tests/sdf_gpu_rig.rs) — run real WGSL, read back buffers.
futures-lite = "2"

[profile.dev]
opt-level = 1
# Drop full debuginfo (level 2): line tables keep panic backtraces with file:line but skip the
# heavy per-variable info, cutting compile + LLD link time and PDB size. We debug via logs /
# BRP / Nsight, not a Rust stepper. (Shader/GPU debug info is separate — see `shader-debug`.)
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3
# Dependencies never get stepped into — no debuginfo at all. Big link-size + link-time win.
debug = false
