[package]
name = "adventure"
version = "0.1.0"
edition = "2024"

[features]
# Default dev build = fast incremental linking + voxel physics + DLSS Ray Reconstruction. So a plain
# `cargo run` (or `cargo run --features editor`) gets walk-the-cubes physics AND the RR denoiser with no
# extra flags. NOTE: `dlss` makes the build REQUIRE the NVIDIA DLSS SDK (`DLSS_SDK`), Vulkan headers
# (`VULKAN_SDK`) + libclang (`LIBCLANG_PATH`) at build time, and FORCES the Vulkan backend at runtime (DLSS is
# Vulkan-only) — set on this dev machine. On a box without the SDK (or a non-NVIDIA GPU), build with
# `--no-default-features --features fast` (drops dlss+physics) or `... --features fast,physics`. Release/ship
# + RenderDoc also drop `fast`: `--release --no-default-features --features physics,dlss` (RenderDoc can't
# hook a dynamically-linked Bevy — see the `renderdoc` feature).
default = ["fast", "physics", "dlss"]
editor = [
    "dep:bevy_egui",
    "dep:egui_dock",
    "dep:egui-phosphor",
    "dep:egui-snarl",
    # Chrome-tracing profiler, RUNTIME-TOGGLEABLE from the editor (Performance panel),
    # OFF by default. We enable `bevy/trace` for the instrumentation (every Bevy system +
    # render-graph node span plus our own `info_span!` SDF spans) but NOT `bevy/trace_chrome`
    # — that feature installs an always-on chrome layer capturing the whole session. Instead
    # we install our OWN chrome layer (via `LogPlugin::custom_layer`) gated behind an atomic
    # the editor flips, so capture starts/stops live. Writes `trace-<timestamp>.json` (load
    # in Perfetto / chrome://tracing, or hand the file to Claude to rank hot spans).
    "bevy/trace",
    "dep:tracing-chrome",
    "dep:sysinfo",
]
# In-app RenderDoc capture (F5), OFF by default. Implies `editor` (the capture plugin lives
# there). `renderdoc` grabs the in-application API handle; `libloading` preloads
# renderdoc.dll before wgpu creates the device so the hook installs (see `load_renderdoc`).
# Build with `--features renderdoc` (add `--no-default-features` to drop `fast`/dynamic_linking,
# which RenderDoc can't hook).
renderdoc = ["editor", "dep:renderdoc", "dep:libloading"]
# Emit shader debug info for an NVIDIA Nsight Graphics GPU-Trace, so sampled GPU cost maps to WGSL
# SOURCE + line numbers (not just per-pass). Two halves, both needed:
#   1. `InstanceFlags::DEBUG` (set in `main.rs::wgpu_settings` under this cfg) → naga's SPIR-V backend
#      turns on `WriterFlags::DEBUG` (emits `OpSource`/`OpLine`).
#   2. `bevy_render/decoupled_naga` → Bevy re-serializes the composed naga module back to a WGSL STRING
#      (`bevy_shader::shader_cache`) and hands wgpu `ShaderSource::Wgsl`. Without it Bevy hands wgpu a
#      bare `ShaderSource::Naga` whose source string is empty, so wgpu-core sets `debug_source = None`
#      and naga emits NO `OpSource`/`OpLine` regardless of the DEBUG flag (wgpu Discussion #7761).
# The embedded source is the COMPOSED/round-tripped WGSL (one synthetic file per pipeline), so Nsight
# shows real shader text per line, but line numbers map to that composed blob, not the original
# `assets/shaders/**.wgsl`. Full NonSemantic step-through isn't reachable (naga emits only legacy debug
# info). OFF by default (round-trip + debug info bloat shaders / slow pipeline creation); build with
# `--features editor,shader-debug` when profiling. See `rdoc/scripts/ngfx` + the `profile-shaders` skill.
shader-debug = ["bevy_render/decoupled_naga"]
# Faster incremental compiles via dynamic linking of Bevy. Dev-only — never ship.
# (Disable with `--no-default-features` when capturing in RenderDoc, which can't inject
# into a dynamically-linked Bevy.)
fast = ["bevy/dynamic_linking"]
# Physics (Stage 6) — the player walks the voxels via a kinematic character controller colliding with
# greedy-cuboid colliders built from voxel occupancy. We use the ENGINE-AGNOSTIC `rapier3d` solver
# directly (no `bevy_rapier` — which has no Bevy-0.19 build and would be another vendored fork to track);
# the thin Bevy integration lives in `voxel::physics`. Off by default.
physics = ["dep:rapier3d"]
# Stage 4c — NVIDIA DLSS Ray Reconstruction (denoiser + upscaler) for the HW-RT voxel path. OFF by
# default — enabling needs the NVIDIA DLSS SDK (`DLSS_SDK`), Vulkan headers (`VULKAN_SDK`), and
# libclang (`LIBCLANG_PATH`) at build time. `bevy/dlss` makes `DefaultPlugins` register
# `DlssInitPlugin` BEFORE `RenderPlugin` (it hooks Vulkan instance/device creation to enable the DLSS
# extensions + insert the `Dlss*Supported` resources) and exposes `bevy::anti_alias::dlss::*`
# (`dlss_wgpu 4.0`, needs wgpu ^29 — satisfied by the fork's 29.0.3). Without it the `Dlss` camera
# component is a no-op. DLSS is Vulkan-only, so `main.rs` pins `Backends::VULKAN` under this cfg.
# `build.rs` copies the `nvngx_dlss*.dll` runtime next to the exe. Replaces the temporal-accum denoise
# (which stays the non-dlss / non-RTX fallback). See memory `solari-gi-worktree` for the proven recipe.
dlss = ["bevy/dlss"]

[dependencies]
# Pruned Bevy feature set: `default-features = false` then ONLY what this 3D + egui app
# uses. Dropped vs Bevy's `2d`/`3d`/`ui` umbrella defaults (confirmed gone from `cargo tree`,
# faster builds): audio (bevy_audio + rodio), glTF (bevy_gltf + the gltf parser), gamepad
# (bevy_gilrs + gilrs), the `hdr` image loader, 2D sprite picking, and the
# x11/wayland/webgl/android platform backends (Windows-only dev).
# Kept: 3D PBR render + gizmos + post-process/AA, UI + text (HUD / ESC menu), scene
# (world.scn.ron), mesh+ui picking (camera MeshRayCast), winit/window, state,
# tonemapping LUTs (the SDF HDR camera's Tonemapping pass — pulls ktx2+zstd), png/jpeg/bmp/tga.
# (bevy_sprite + bevy_animation stay — pulled transitively by the UI/PBR features + rapier.)
bevy = { path = "D:/bevy-fork", default-features = false, features = [
    # app + platform
    "std", "multi_threaded", "async_executor", "reflect_auto_register",
    "bevy_asset", "bevy_log", "bevy_state", "bevy_window", "bevy_winit",
    "bevy_input_focus", "custom_cursor", "default_font", "sysinfo_plugin",
    # 3D render
    "3d_api", "bevy_render", "bevy_core_pipeline", "bevy_anti_alias",
    "bevy_post_process", "bevy_pbr", "bevy_gizmos", "bevy_gizmos_render",
    "tonemapping_luts",
    # UI + text
    "common_api", "bevy_ui", "bevy_ui_render", "bevy_text",
    # scene + picking (mesh raycast for the camera; no 2D sprite picking)
    "bevy_scene", "bevy_picking", "mesh_picking", "ui_picking",
    # image formats
    "png", "jpeg", "bmp", "tga",
] }
# Stage 6 physics — the engine-agnostic Rapier solver (no Bevy dep, so no fork to track against the Bevy
# fork). We build static greedy-cuboid colliders from voxel occupancy + drive a kinematic character
# controller; the thin Bevy glue is in `voxel::physics`. Optional + off by default; all rapier-using code
# is `#[cfg(feature = "physics")]`. `dim3` = 3D, `f32` = single precision (matches our world units).
rapier3d = { version = "0.33", optional = true, default-features = false, features = ["dim3", "f32", "std"] }
# Direct dep on the SAME bevy_render the `bevy` umbrella already uses (Cargo unifies it — no extra
# build cost, no second copy) so `shader-debug` can flip its `decoupled_naga` feature (round-trips
# composed shaders to a WGSL string → naga emits `OpSource`/`OpLine` for Nsight). MUST be non-optional:
# declaring it makes `bevy_manifest` emit `bevy_render::` paths in the ShaderType/etc. derives, which
# only resolve if the crate is always present — an `optional = true` dep breaks every non-shader-debug
# build (`bevy_render` unresolved). Not referenced by name in code; a feature/path carrier only.
bevy_render = { path = "D:/bevy-fork/crates/bevy_render", default-features = false }
wgpu = "29.0.3"
# Fast non-cryptographic hasher (the rustc compiler's own FxHash) for the hot integer-keyed maps
# in the SDF bake path — brick/chunk/tile lookups per baked brick. std's SipHash is ~3–5× slower
# and pointless for these small integer keys. See `atlas.rs` / `chunk.rs` `Fx*` aliases.
rustc-hash = "2"
# Editor egui stack — unified on egui 0.34 (validated against the Bevy-0.19 + wgpu-trunk fork in
# D:/spike-editor-egui). bevy-inspector-egui is DROPPED (no Bevy-0.19 release); its inspector panel
# was removed from src/editor. bevy_egui is consumed via the local fork (D:/bevy_egui-fork) only to add
# the `enable wgpu_binding_array;` directive its bindless egui.wgsl lacks (the wgpu-trunk naga requires
# it) — see the `[patch.crates-io] bevy_egui` line below.
bevy_egui = { version = "0.40.0-rc.1", optional = true, default-features = false, features = ["default_fonts", "render"] }
# PBR texture-library loading: decode role-map source files (image) and read material
# manifests (ron). Multiple formats so a PBR-texture resource can reference any of them.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tga"] }
# RON + serde: PBR material manifests AND the custom .scene format (soul_scene).
# Otherwise only transitive via bevy_scene.
ron = "0.12"
serde = { version = "1", features = ["derive"] }
egui_dock = { version = "0.19", optional = true, features = ["serde"] }
# In-app RenderDoc capture, editor-only. `libloading` preloads renderdoc.dll early so the
# graphics hook installs before the wgpu device exists.
renderdoc = { version = "0.12", optional = true }
libloading = { version = "0.8", optional = true }
# Editor-only Chrome-tracing layer, installed by us (not via `bevy/trace_chrome`) so the
# editor can start/stop capture at runtime. See `editor::chrome_trace`.
tracing-chrome = { version = "0.7", optional = true }
# Phosphor icon font for the editor toolbar (egui 0.34). Installed into the egui context at
# startup; gives named glyph constants so toolbar buttons show real icons.
egui-phosphor = { version = "0.12", optional = true }
# Off-the-shelf egui node-graph editor for the worldgen biome node editor. The crates.io 0.9.0
# release is egui 0.33; this git rev is already on egui 0.34 (unreleased), so the whole stack
# unifies on egui 0.34. `serde` for saving the editor's Snarl graph.
egui-snarl = { git = "https://github.com/zakarumych/egui-snarl", rev = "5bdc34e4ebdb9d7a0968f21564dce51a1a027ee8", optional = true, features = ["serde"] }
# Host/process RAM sampling for the Performance panel's memory breakdown (editor only). We
# query it directly rather than via Bevy's SystemInformationDiagnosticsPlugin, which only
# exposes host memory as a percentage (no byte total) — we want a byte-level breakdown.
sysinfo = { version = "0.37", optional = true, default-features = false, features = ["system"] }
# egui's 2D tessellation (filled, antialiased shapes) for the in-tree gizmo overlay
# renderer. Pinned to 0.34 to reuse the copies the editor egui stack (egui 0.34) pulls in.
epaint = "0.34"
ecolor = "0.34"
emath = "0.34"
# Cast gizmo vertex/index + the SDF GPU structs (point lights, materials, light-grid cells) to
# &[u8] for buffer upload via `cast_slice`. `derive` for `#[derive(Pod, Zeroable)]` on those
# `#[repr(C)]` structs (see `sdf_render::render::gpu`), replacing hand-rolled `to_le_bytes` packing.
bytemuck = { version = "1", features = ["derive"] }
# Portable 4-wide SIMD (`f64x4`/`i32x4`/`u32x4`) for the columnar worldgen height eval: the value-noise
# octave sum is the gen hot path, processed 4 grid points at a time. `wide` falls back to scalar lanes on
# non-SIMD targets, and its integer ops (xor/wrapping-mul/shift) + `f64` basic ops (`+ - *`, `floor`,
# `i32→f64`) are bit-identical to the scalar `noise.rs` primitives — preserving the bit-portable
# determinism invariant (no FMA/reassociation). Already in the tree transitively via rapier (no new fetch).
wide = "0.7.33"

[dev-dependencies]
# spv-out: emit SPIR-V from naga in tests so we can inspect which opcode signed `%`
# lowers to (OpUMod vs OpSRem) — root-cause evidence for the negative-modulo divergence.
naga = { version = "29.0.3", features = ["spv-out", "wgsl-in"] }
# Composes #import-based WGSL modules so the shader-validation test can resolve the
# split sdf shader the same way Bevy's ShaderCache does at runtime. `default-features = false`
# drops naga_oil's `glsl` feature: with it on, naga_oil cross-checks each composable module's
# interface by emitting a GLSL header too, and the GLSL backend panics on `binding_array` (the
# paged atlas pool). The runtime build never enables `glsl` (bevy pulls only `test_shader`), so
# this just matches the test to the real compose path. We compose WGSL only.
naga_oil = { version = "0.22", default-features = false }
# block_on for the GPU compute rig (tests/sdf_gpu_rig.rs) — run real WGSL, read back buffers.
futures-lite = "2"
# Decode Rgba16Float texture readback (f16 → f32) in the DLSS-guide GPU test. Dev-only: the runtime
# never decodes half floats on the CPU. (The render deps dropped `half` with the mesh-bake cut.)
half = "2"

[profile.dev]
opt-level = 1
# Drop full debuginfo (level 2): line tables keep panic backtraces with file:line but skip the
# heavy per-variable info, cutting compile + LLD link time and PDB size. We debug via logs /
# Nsight, not a Rust stepper. (Shader/GPU debug info is separate — see `shader-debug`.)
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3
# Dependencies never get stepped into — no debuginfo at all. Big link-size + link-time win.
debug = false

# Voxel-RT engine rebuild: vendored Bevy 0.19-rc.3 (D:/bevy-fork) migrated to wgpu-trunk, consumed via
# the `bevy`/`bevy_render` path deps above. These redirect Bevy's `wgpu = "29.0.3"` deps to the local
# wgpu-trunk fork (D:/wgpu-fork = trunk rev 98a7062, version-bumped 29.0.0→29.0.3) which has AABB-BLAS
# ray tracing. See memory `voxel-raytracing-engine-pivot`.
[patch.crates-io]
wgpu = { path = "D:/wgpu-fork/wgpu" }
wgpu-core = { path = "D:/wgpu-fork/wgpu-core" }
wgpu-hal = { path = "D:/wgpu-fork/wgpu-hal" }
wgpu-types = { path = "D:/wgpu-fork/wgpu-types" }
naga = { path = "D:/wgpu-fork/naga" }
wgpu-naga-bridge = { path = "D:/wgpu-fork/wgpu-naga-bridge" }

# Editor egui stack (feature = "editor"):
# bevy_egui forked locally only to add `enable wgpu_binding_array;` to its bindless `egui.wgsl`
# (the wgpu-trunk naga requires the directive; upstream omits it → a runtime validation crash).
# The fork is the unmodified 0.40.0-rc.1 source apart from that one shader line.
bevy_egui = { path = "D:/bevy_egui-fork" }
# bevy_egui pulls its `bevy_*` sub-crates from crates.io; redirect every one to the local Bevy-0.19
# fork (D:/bevy-fork) so the editor stack and the app share ONE Bevy (no second copy / no version
# clash). Enumerated from D:/bevy-fork/crates/ — mirrors D:/spike-editor-egui/Cargo.toml.
# NOTE: only the `bevy_*` crates actually present in the crate graph are patched. The fork's
# audio / gilrs / gltf / camera_controller / dev_tools / remote / world_serialization crates are
# NOT pulled by the pruned `bevy` feature set or by bevy_egui, so patching them would emit a
# "patch was not used in the crate graph" advisory — they're intentionally omitted. Re-add a line
# if a future feature config (or a bevy_egui feature) starts pulling one of them.
bevy = { path = "D:/bevy-fork" }
bevy_a11y = { path = "D:/bevy-fork/crates/bevy_a11y" }
bevy_animation = { path = "D:/bevy-fork/crates/bevy_animation" }
bevy_anti_alias = { path = "D:/bevy-fork/crates/bevy_anti_alias" }
bevy_app = { path = "D:/bevy-fork/crates/bevy_app" }
bevy_asset = { path = "D:/bevy-fork/crates/bevy_asset" }
bevy_camera = { path = "D:/bevy-fork/crates/bevy_camera" }
bevy_color = { path = "D:/bevy-fork/crates/bevy_color" }
bevy_core_pipeline = { path = "D:/bevy-fork/crates/bevy_core_pipeline" }
bevy_derive = { path = "D:/bevy-fork/crates/bevy_derive" }
bevy_diagnostic = { path = "D:/bevy-fork/crates/bevy_diagnostic" }
bevy_ecs = { path = "D:/bevy-fork/crates/bevy_ecs" }
bevy_encase_derive = { path = "D:/bevy-fork/crates/bevy_encase_derive" }
bevy_gizmos = { path = "D:/bevy-fork/crates/bevy_gizmos" }
bevy_image = { path = "D:/bevy-fork/crates/bevy_image" }
bevy_input = { path = "D:/bevy-fork/crates/bevy_input" }
bevy_input_focus = { path = "D:/bevy-fork/crates/bevy_input_focus" }
bevy_internal = { path = "D:/bevy-fork/crates/bevy_internal" }
bevy_light = { path = "D:/bevy-fork/crates/bevy_light" }
bevy_log = { path = "D:/bevy-fork/crates/bevy_log" }
bevy_material = { path = "D:/bevy-fork/crates/bevy_material" }
bevy_math = { path = "D:/bevy-fork/crates/bevy_math" }
bevy_mesh = { path = "D:/bevy-fork/crates/bevy_mesh" }
bevy_pbr = { path = "D:/bevy-fork/crates/bevy_pbr" }
bevy_picking = { path = "D:/bevy-fork/crates/bevy_picking" }
bevy_platform = { path = "D:/bevy-fork/crates/bevy_platform" }
bevy_post_process = { path = "D:/bevy-fork/crates/bevy_post_process" }
bevy_ptr = { path = "D:/bevy-fork/crates/bevy_ptr" }
bevy_reflect = { path = "D:/bevy-fork/crates/bevy_reflect" }
bevy_render = { path = "D:/bevy-fork/crates/bevy_render" }
bevy_scene = { path = "D:/bevy-fork/crates/bevy_scene" }
bevy_shader = { path = "D:/bevy-fork/crates/bevy_shader" }
bevy_solari = { path = "D:/bevy-fork/crates/bevy_solari" }
bevy_sprite = { path = "D:/bevy-fork/crates/bevy_sprite" }
bevy_sprite_render = { path = "D:/bevy-fork/crates/bevy_sprite_render" }
bevy_state = { path = "D:/bevy-fork/crates/bevy_state" }
bevy_tasks = { path = "D:/bevy-fork/crates/bevy_tasks" }
bevy_text = { path = "D:/bevy-fork/crates/bevy_text" }
bevy_time = { path = "D:/bevy-fork/crates/bevy_time" }
bevy_transform = { path = "D:/bevy-fork/crates/bevy_transform" }
bevy_ui = { path = "D:/bevy-fork/crates/bevy_ui" }
bevy_ui_render = { path = "D:/bevy-fork/crates/bevy_ui_render" }
bevy_utils = { path = "D:/bevy-fork/crates/bevy_utils" }
bevy_window = { path = "D:/bevy-fork/crates/bevy_window" }
bevy_winit = { path = "D:/bevy-fork/crates/bevy_winit" }
